--- a/cond-task-evaluation.ipynb
+++ b/cond-task-evaluation.ipynb
@@ -15,6 +15,7 @@
     "\n",
     "from src.dataset import SignalTrainDataset, download_signal_train_dataset_to\n",
     "from src.model import S4ConditionalSideChainModel\n",
+    "from src.model.layer import convert_to_decibel\n",
     "from src.parameter import ConditionalTaskParameter\n",
     "from src.utils import get_tensor_device, set_random_seed_to"
    ]
@@ -69,7 +70,7 @@
     "\n",
     "CHECKPOINT_DIR = Path('./experiment-result')\n",
     "JOB_NAME = '2023-4-7-16-35-36'\n",
-    "EPOCH = '34'\n",
+    "EPOCH = '35'\n",
     "\n",
     "TESTING_DATASET_SEGMENT_LENGTH = 10.0\n",
     "TESTING_DATASET_BATCH_SIZE = 5"
@@ -304,29 +305,25 @@
     "    \n",
     "    sr = testing_dataset.sample_rate\n",
     "    step_signal = torch.cat([\n",
-    "        torch.zeros(int(sr * 0.25)),\n",
-    "        torch.ones(int(sr * 0.5)),\n",
-    "        torch.zeros(int(sr * 0.5)) + 0.75,\n",
-    "        torch.zeros(int(sr * 0.5)) + 0.25,\n",
-    "        torch.zeros(int(sr * 0.5)) + 0.05,\n",
-    "        torch.zeros(int(sr * 0.5)) + 0.005,\n",
-    "        torch.ones(int(sr * 0.5)),\n",
-    "        torch.zeros(int(sr * 0.25)),\n",
+    "        torch.zeros(int(sr * 0.2)),\n",
+    "        torch.ones(int(sr * 0.8)),\n",
+    "        torch.zeros(int(sr * 0.8)) + 0.2,\n",
+    "        torch.zeros(int(sr * 0.2)),\n",
     "    ]).to(device, torch.float32)\n",
-    "    output_signal: Tensor = model(\n",
+    "    output_signals: Tensor = model(\n",
     "        step_signal.repeat(parameter_pair.size(0), 1),\n",
     "        parameter_pair,\n",
     "    )\n",
+    "    step_signal_decibel = convert_to_decibel(step_signal)\n",
     "    \n",
     "    fig, axs = plt.subplots(10, 3, figsize=(15, 50))\n",
-    "    for i, signal in enumerate(output_signal.split(1)):\n",
+    "    for i, output_signal in enumerate(output_signals.split(1)):\n",
     "        switch, peak_reduction = parameter_pair[i].tolist()\n",
     "        row, col = divmod(i, 3)\n",
     "        ax = axs[row][col]\n",
-    "        ax.plot(step_signal.cpu().numpy(), color='blue', linestyle='dashed', alpha=1.0)\n",
-    "        ax.plot(signal.flatten().cpu().numpy(), color='red', linestyle='solid', alpha=0.5)\n",
+    "        ax.plot(step_signal_decibel.cpu().numpy(), color='blue', linestyle='dashed', alpha=1.0)\n",
+    "        ax.plot(convert_to_decibel(output_signal).flatten().cpu().numpy(), color='red', linestyle='solid', alpha=0.5)\n",
     "        ax.set_title(f'{switch = }, {peak_reduction = }')\n",
-    "        ax.set_ybound(-0.2)\n",
     "    fig.show()\n",
     "    \n",
     "evaluate_model_step_response()"
