--- a/cond-task-evaluation.ipynb
+++ b/cond-task-evaluation.ipynb
@@ -69,11 +69,12 @@
     "DATASET_DIR = Path('./data/SignalTrain')\n",
     "\n",
     "CHECKPOINT_DIR = Path('./experiment-result')\n",
-    "JOB_NAME = '2023-4-7-16-35-36'\n",
-    "EPOCH = '35'\n",
+    "JOB_NAME = '2023-4-11-16-56-59'\n",
+    "EPOCH = 59\n",
     "\n",
     "TESTING_DATASET_SEGMENT_LENGTH = 10.0\n",
-    "TESTING_DATASET_BATCH_SIZE = 5"
+    "TESTING_DATASET_BATCH_SIZE = 5\n",
+    "TESTING_DATASET_SAMPLE_INDEX = [10, 20, 100, 200, 234]"
    ]
   },
   {
@@ -129,13 +130,7 @@
    "source": [
     "@torch.no_grad()\n",
     "def evaluate_output_audio():\n",
-    "    x, y, cond = testing_dataset.collate_fn([\n",
-    "        testing_dataset[10],\n",
-    "        testing_dataset[20],\n",
-    "        testing_dataset[100],\n",
-    "        testing_dataset[200],\n",
-    "        testing_dataset[234],\n",
-    "    ])\n",
+    "    x, y, cond = testing_dataset.collate_fn([testing_dataset[i] for i in TESTING_DATASET_SAMPLE_INDEX])\n",
     "    x = x.to(device)\n",
     "    y = y.to(device)\n",
     "    cond = cond.to(device)\n",
@@ -170,13 +165,7 @@
    "source": [
     "@torch.no_grad()\n",
     "def evaluate_waveform_difference():\n",
-    "    x, y, cond = testing_dataset.collate_fn([\n",
-    "        testing_dataset[10],\n",
-    "        testing_dataset[20],\n",
-    "        testing_dataset[100],\n",
-    "        testing_dataset[200],\n",
-    "        testing_dataset[234],\n",
-    "    ])\n",
+    "    x, y, cond = testing_dataset.collate_fn([testing_dataset[i] for i in TESTING_DATASET_SAMPLE_INDEX])\n",
     "    x = x.to(device)\n",
     "    y = y.to(device)\n",
     "    cond = cond.to(device)\n",
@@ -220,13 +209,7 @@
    "source": [
     "@torch.no_grad()\n",
     "def evaluate_rms_difference():\n",
-    "    x, y, cond = testing_dataset.collate_fn([\n",
-    "        testing_dataset[10],\n",
-    "        testing_dataset[20],\n",
-    "        testing_dataset[100],\n",
-    "        testing_dataset[200],\n",
-    "        testing_dataset[234],\n",
-    "    ])\n",
+    "    x, y, cond = testing_dataset.collate_fn([testing_dataset[i] for i in TESTING_DATASET_SAMPLE_INDEX])\n",
     "    x = x.to(device)\n",
     "    y = y.to(device)\n",
     "    cond = cond.to(device)\n",
@@ -353,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
