put folder back

--- a/multiply/multiply_with_multiply.ipynb
+++ b/multiply/multiply_with_multiply.ipynb
@@ -16,31 +16,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from typing import Literal\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "from torch import nn, Tensor\n",
+    "from torch.backends.mps import is_available as mps_is_available\n",
+    "from torch.cuda import is_available as cuda_is_available\n",
+    "from torchinfo import summary\n",
+    "from tqdm.notebook import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.1.0.dev20230515\n",
-      "Using device: mps\n",
-      "tensor([1, 2, 3], device='mps:0')\n",
-      "tensor([1, 2, 3])\n"
+      "Python version: 3.10.11 (main, Apr  7 2023, 07:24:53) [Clang 14.0.0 (clang-1400.0.29.202)]\n",
+      "PyTorch version: 2.0.0\n",
+      "Currently, using mps device.\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import torch\n",
-    "from torch import nn\n",
-    "from torchinfo import summary\n",
+    "if not sys.version_info >= (3, 10):\n",
+    "    raise RuntimeError(\"This notebook requires Python 3.10 or later.\")\n",
+    "print(f'Python version: {sys.version}')\n",
     "\n",
-    "print(torch.__version__)\n",
-    "device = \"mps\" if torch.backends.mps.is_available() else \"cpu\"\n",
-    "print(f\"Using device: {device}\")\n",
-    "print(torch.tensor([1,2,3], device=\"mps\"))\n",
-    "print(torch.tensor([1,2,3]))"
+    "print(f'PyTorch version: {torch.__version__}')\n",
+    "device = 'cuda' if cuda_is_available() else 'mps' if mps_is_available() else 'cpu'\n",
+    "print(f'Currently, using {device} device.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batchsize = 10000"
    ]
   },
   {
@@ -50,28 +73,28 @@
    "outputs": [],
    "source": [
     "class Feedforward(torch.nn.Module):\n",
-    "        def __init__(self, input_size, hidden_size):\n",
-    "            super(Feedforward, self).__init__()\n",
-    "            self.input_size = input_size\n",
-    "            self.hidden_size  = hidden_size\n",
-    "            self.fc1 = nn.Linear(self.input_size, self.hidden_size)\n",
-    "            self.relu1 = nn.ReLU()\n",
-    "            self.fc2a = nn.Linear(self.input_size, 5)\n",
-    "            self.fc2b = nn.Linear(self.input_size, 5)\n",
-    "            self.relu2a = nn.ReLU()\n",
-    "            self.relu2b = nn.ReLU()\n",
-    "            self.fc3 = nn.Linear(self.hidden_size + 5, 1)\n",
-    "            #self.tanh = torch.nn.Tanh()\n",
-    "            \n",
-    "        def forward(self, x):\n",
-    "            fc1_out = self.fc1(x)\n",
-    "            hidden1 = self.relu1(fc1_out)\n",
-    "            fc2a_out = self.fc2a(x)\n",
-    "            hidden2a = self.relu2a(fc2a_out)\n",
-    "            fc2b_out = self.fc2b(x)\n",
-    "            hidden2b = self.relu2b(fc2b_out)\n",
-    "            output = self.fc3(torch.cat([hidden1, hidden2a * hidden2b], dim = 1))\n",
-    "            return output"
+    "    def __init__(self, input_size: int, hidden_size: int):\n",
+    "        super(Feedforward, self).__init__()\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size  = hidden_size\n",
+    "        self.fc1 = nn.Linear(self.input_size, self.hidden_size)\n",
+    "        self.relu1 = nn.ReLU()\n",
+    "        self.fc2a = nn.Linear(self.input_size, 5)\n",
+    "        self.fc2b = nn.Linear(self.input_size, 5)\n",
+    "        self.relu2a = nn.ReLU()\n",
+    "        self.relu2b = nn.ReLU()\n",
+    "        self.fc3 = nn.Linear(self.hidden_size + 5, 1)\n",
+    "        #self.tanh = torch.nn.Tanh()\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        fc1_out = self.fc1(x)\n",
+    "        hidden1 = self.relu1(fc1_out)\n",
+    "        fc2a_out = self.fc2a(x)\n",
+    "        hidden2a = self.relu2a(fc2a_out)\n",
+    "        fc2b_out = self.fc2b(x)\n",
+    "        hidden2b = self.relu2b(fc2b_out)\n",
+    "        output = self.fc3(torch.cat([hidden1, hidden2a * hidden2b], dim = 1))\n",
+    "        return output"
    ]
   },
   {
@@ -84,20 +107,14 @@
     "\n",
     "# for x_train/x_test we need (n, 2) of random -1 to 1\n",
     "# and output y_train/y_test we need the product\n",
-    "batchsize = 10000\n",
-    "x_train = np.random.uniform(low=-1.0, high=1.0, size=(batchsize, 2))\n",
+    "x_train = torch.from_numpy(np.random.uniform(low=-1.0, high=1.0, size=(batchsize, 2)))\n",
     "y_train = x_train[:, 0] * x_train[:, 1]\n",
     "\n",
     "# print(x_train, y_train)\n",
-    "x_test = np.random.uniform(low=-1.0, high=1.0, size=(batchsize, 2))\n",
+    "x_test = torch.from_numpy(np.random.uniform(low=-1.0, high=1.0, size=(batchsize, 2)))\n",
     "y_test = x_test[:, 0] * x_test[:, 1]\n",
-    "# print(x_train, y_train)\n",
     "\n",
-    "x_train = torch.FloatTensor(x_train)\n",
-    "y_train = torch.FloatTensor(y_train)\n",
-    "\n",
-    "x_test = torch.FloatTensor(x_test)\n",
-    "y_test = torch.FloatTensor(y_test)"
+    "print(\"x_train size\", x_train.size())"
    ]
   },
   {
@@ -145,9 +162,8 @@
     }
    ],
    "source": [
-    "print(\"x_train size\", x_train.size())\n",
     "model = Feedforward(2, 100)\n",
-    "summary(model, input_size = x_train.size())\n"
+    "summary(model, input_size=x_train.size())"
    ]
   },
   {
@@ -197,7 +213,7 @@
    ],
    "source": [
     "model = Feedforward(2, 1)\n",
-    "summary(model, input_size = (10000, 2))\n",
+    "summary(model, input_size=(10000, 2))\n",
     "model.to(device)\n",
     "# input is (batchsize, 2)\n",
     "# output dimension is (batchsize, 1)\n",
@@ -280,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
