--- a/cond-task-eval.ipynb
+++ b/cond-task-eval.ipynb
@@ -13,6 +13,7 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import numpy.typing as npt\n",
     "import torch\n",
     "from scipy.io import wavfile\n",
     "from scipy.signal import freqz\n",
@@ -441,7 +442,6 @@
    "source": [
     "@torch.no_grad()\n",
     "def evaluate_inference_efficiency():\n",
-    "    return NotImplemented\n",
     "    if device.type == 'cpu':\n",
     "        print(f'Doing inference speed test on CPU...')\n",
     "    elif device.type == 'cuda':\n",
@@ -449,24 +449,24 @@
     "    \n",
     "    print(f'Individual sample length: {TESTING_DATASET_SEGMENT_LENGTH} seconds.')\n",
     "\n",
-    "    inference_time: list[int] = []\n",
+    "    for dataset_name, testing_dataset in testing_datasets.items():\n",
+    "        inference_time: list[int] = []\n",
+    "        for i in tqdm(range(10)):\n",
+    "            x, _, cond = testing_dataset[i]\n",
+    "            x = x.to(device)\n",
+    "            cond = cond.to(device)\n",
     "\n",
-    "    for i in tqdm(range(10)):\n",
-    "        x, _, cond = testing_dataset.collate_fn([testing_dataset[i]])\n",
-    "        x = x.to(device)\n",
-    "        cond = cond.to(device)\n",
-    "\n",
-    "        tic = time.perf_counter_ns()\n",
-    "        model(x, cond)\n",
-    "        toc = time.perf_counter_ns()\n",
-    "        inference_time.append(toc - tic)\n",
-    "    \n",
-    "    inference_time_mean = mean(inference_time) / 1e6\n",
-    "    print(f'Average inference time: {inference_time_mean} ms.')\n",
-    "    inference_time_stdev = stdev(inference_time) / 1e6\n",
-    "    print(f'Inference time standard deviation: {inference_time_stdev} ms.')\n",
-    "    speed_ratio = inference_time_mean / (TESTING_DATASET_SEGMENT_LENGTH * 1e3)\n",
-    "    print(f'Real-time speed ratio: {speed_ratio}.')\n",
+    "            tic = time.perf_counter_ns()\n",
+    "            model(x, cond)\n",
+    "            toc = time.perf_counter_ns()\n",
+    "            inference_time.append(toc - tic)\n",
+    "        \n",
+    "        inference_time_mean = mean(inference_time) / 1e6\n",
+    "        print(f'Average inference time on {dataset_name} dataset: {inference_time_mean} ms.')\n",
+    "        inference_time_stdev = stdev(inference_time) / 1e6\n",
+    "        print(f'Inference time standard deviation on {dataset_name} dataset: {inference_time_stdev} ms.')\n",
+    "        speed_ratio = inference_time_mean / (TESTING_DATASET_SEGMENT_LENGTH * 1e3)\n",
+    "        print(f'Real-time speed ratio on {dataset_name} dataset: {speed_ratio}.')\n",
     "\n",
     "evaluate_inference_efficiency()"
    ]
@@ -500,9 +500,19 @@
     }
    ],
    "source": [
+    "def acquire_rms(x: npt.NDArray[np.float32], window: int = 100):\n",
+    "    assert x.ndim == 1\n",
+    "    size = x.size\n",
+    "    ret = np.fromiter(\n",
+    "        (np.sqrt(np.mean(np.square(x[i:i + window]))) for i in range(0, size, window)),\n",
+    "        dtype=np.float32\n",
+    "    )\n",
+    "    return ret\n",
+    "\n",
+    "\n",
     "@torch.no_grad()\n",
     "def evaluate_output_audio():\n",
-    "    # Audio output, waveform difference, RMS difference (TODO) and STFT difference\n",
+    "    # Audio output, waveform difference, RMS difference and STFT difference\n",
     "    for dataset_name, dataset in testing_datasets.items():\n",
     "        if dataset_name != 'long':\n",
     "            continue\n",
@@ -522,21 +532,13 @@
     "            \n",
     "            for i in range(y_hat.size(0)):\n",
     "                switch, peak_reduction = cond[i, :].flatten().cpu().tolist()\n",
-    "                x_audio = x[i, :].flatten()\n",
-    "                y_audio = y[i, :].flatten()\n",
-    "                y_hat_audio = y_hat[i, :].flatten()\n",
+    "                prefix = f'{str(ii).zfill(3)}-switch={switch}-peak-reduction={peak_reduction}'\n",
+    "    \n",
+    "                x_audio = x[i, :].flatten().cpu().numpy()\n",
+    "                y_audio = y[i, :].flatten().cpu().numpy()\n",
+    "                y_hat_audio = y_hat[i, :].flatten().cpu().numpy()\n",
     "                y_diff_audio = y_audio - y_hat_audio\n",
     "\n",
-    "                y_stft = torch.stft(y_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
-    "                y_hat_stft = torch.stft(y_hat_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
-    "                y_diff_stft = (y_stft.abs() - y_hat_stft.abs()).log10().mul(10).cpu().numpy()\n",
-    "\n",
-    "                x_audio = x_audio.cpu().numpy()\n",
-    "                y_audio = y_audio.cpu().numpy()\n",
-    "                y_hat_audio = y_hat_audio.cpu().numpy()\n",
-    "                y_diff_audio = y_diff_audio.cpu().numpy()\n",
-    "\n",
-    "                prefix = f'{str(ii).zfill(3)}-switch={switch}-peak-reduction={peak_reduction}'\n",
     "                wavfile.write(output_dir / f'{prefix}-x.wav', SignalTrainDataset.sample_rate, x_audio)\n",
     "                wavfile.write(output_dir / f'{prefix}-y.wav', SignalTrainDataset.sample_rate, y_audio)\n",
     "                wavfile.write(output_dir / f'{prefix}-y-hat.wav', SignalTrainDataset.sample_rate, y_hat_audio)\n",
@@ -550,6 +552,22 @@
     "                fig.savefig(str(output_dir / f'{prefix}-y-diff.png'))\n",
     "                plt.close(fig)\n",
     "\n",
+    "                y_rms = acquire_rms(y_audio)\n",
+    "                y_hat_rms = acquire_rms(y_hat_audio)\n",
+    "                y_diff_rms = y_rms - y_hat_rms\n",
+    "\n",
+    "                fig, ax = plt.subplots(figsize=(25, 5))\n",
+    "                ax.plot(y_diff_rms)\n",
+    "                ax.set_title(f'{prefix}')\n",
+    "                ax.set_xlabel('Time (s)')\n",
+    "                ax.set_ylabel('Amplitude')\n",
+    "                fig.savefig(str(output_dir / f'{prefix}-y-rms-diff.png'))\n",
+    "                plt.close(fig)\n",
+    "\n",
+    "                y_stft = torch.stft(y_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
+    "                y_hat_stft = torch.stft(y_hat_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
+    "                y_diff_stft = (y_stft.abs() - y_hat_stft.abs()).log10().mul(10).cpu().numpy()\n",
+    "\n",
     "                fig, ax = plt.subplots(figsize=(25, 5))\n",
     "                ax.pcolormesh(y_diff_stft, cmap='jet')\n",
     "                ax.set_title(f'{prefix}')\n",
@@ -561,62 +579,6 @@
     "                ii += 1\n",
     "\n",
     "evaluate_output_audio()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Evaluate RMS Difference"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NotImplemented"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "@torch.no_grad()\n",
-    "def evaluate_rms_difference():\n",
-    "    return NotImplemented\n",
-    "    x, y, cond = testing_dataset.collate_fn([testing_dataset[i] for i in TESTING_DATASET_SAMPLE_INDEX])\n",
-    "    x = x.to(device)\n",
-    "    y = y.to(device)\n",
-    "    cond = cond.to(device)\n",
-    "    \n",
-    "    y_hat: Tensor = model(y, cond)\n",
-    "    \n",
-    "    fig, axes = plt.subplots(5, 1, figsize=(25, 25))\n",
-    "    for i, (y_audio, y_hat_audio, cond_data) in enumerate(zip(\n",
-    "        y.split(1), y_hat.split(1), cond.split(1),\n",
-    "    )):\n",
-    "        diff = (y_audio - y_hat_audio).flatten().cpu()\n",
-    "        switch, peak_reduction = cond_data.flatten().cpu().tolist()\n",
-    "        ax = axes[i]\n",
-    "        ax.plot(diff.numpy())\n",
-    "        ax.set_title(\n",
-    "            f'Waveform Difference (Switch: {switch}, '\n",
-    "            f'Peak reduction: {peak_reduction}) '\n",
-    "            f'Mean {diff.abs().mean().item():.8f}'\n",
-    "        )\n",
-    "        ax.set_xlabel('Time (s)')\n",
-    "        ax.set_ylabel('Amplitude')\n",
-    "    \n",
-    "    fig.show()\n",
-    "\n",
-    "evaluate_rms_difference()"
    ]
   },
   {
@@ -720,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
