keep on working evaluation notebook

--- a/cond-task-eval.ipynb
+++ b/cond-task-eval.ipynb
@@ -125,6 +125,7 @@
       " 'model_film_take_batchnorm': True,\n",
       " 'model_inner_audio_channel': 32,\n",
       " 'model_s4_hidden_size': 4,\n",
+      " 'model_take_parametered_tanh': False,\n",
       " 'model_take_residual_connection': True,\n",
       " 'model_take_side_chain': True,\n",
       " 'model_take_tanh': True,\n",
@@ -139,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c89ff88e35f740e88ff9933d44969521",
+       "model_id": "66d40865010346179941c763e76df879",
        "version_major": 2,
        "version_minor": 0
       },
@@ -153,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5c60b61372f4fbdbe86c85ce52636b2",
+       "model_id": "29858f77136c4592a39097c8e578de87",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,7 +168,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ff9259d84ae498b8f0bb2b4ce9906f6",
+       "model_id": "869d6cc8e9d243a58fb414a875e911f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,7 +242,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c95844bb44ed4dc89730938300a4f62c",
+       "model_id": "460a8d64fd934ece870a233f65d6dd4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -255,7 +256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e405914fcafa4ce9829b162b5d73b91d",
+       "model_id": "06037998852644dcbde938c5030b05ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +270,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0984d674c2f845db82b081bc0627bc4f",
+       "model_id": "74bcd0bbabca4ebb80f4b8413d1bfe2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -429,14 +430,81 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doing inference speed test on NVIDIA GeForce RTX 3090.\n",
+      "Individual sample length: 10.0 seconds.\n"
+     ]
+    },
+    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d92cb04825444befa09cc2eb26a13a48",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "NotImplemented"
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average inference time on short dataset: 8.3386799 ms.\n",
+      "Inference time standard deviation on short dataset: 0.18501996428160575 ms.\n",
+      "Real-time speed ratio on short dataset: 0.00083386799.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "de43e772afa34d1591ea3a2de4c962f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average inference time on mid dataset: 20.916303 ms.\n",
+      "Inference time standard deviation on mid dataset: 0.23312371901441328 ms.\n",
+      "Real-time speed ratio on mid dataset: 0.0020916303.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "474d3bf6a211476abe1dbabc7cf16603",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average inference time on long dataset: 51.317885700000005 ms.\n",
+      "Inference time standard deviation on long dataset: 0.12429843326450704 ms.\n",
+      "Real-time speed ratio on long dataset: 0.00513178857.\n"
+     ]
     }
    ],
    "source": [
@@ -453,8 +521,8 @@
     "        inference_time: list[int] = []\n",
     "        for i in tqdm(range(10)):\n",
     "            x, _, cond = testing_dataset[i]\n",
-    "            x = x.to(device)\n",
-    "            cond = cond.to(device)\n",
+    "            x = x.to(device).unsqueeze(0)\n",
+    "            cond = cond.to(device).unsqueeze(0)\n",
     "\n",
     "            tic = time.perf_counter_ns()\n",
     "            model(x, cond)\n",
@@ -481,13 +549,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "08c4135c745a4f2a83a8868fa634575b",
+       "model_id": "6f6229e0e3dd40d18307054ff180e604",
        "version_major": 2,
        "version_minor": 0
       },
@@ -520,7 +588,7 @@
     "        dataloader = DataLoader(dataset, 20, num_workers=8, pin_memory=True)\n",
     "\n",
     "        output_dir = job_eval_dir / f'output-audio-{dataset_name}'\n",
-    "        output_dir.mkdir()\n",
+    "        output_dir.mkdir(exist_ok=True)\n",
     "\n",
     "        ii = 0\n",
     "        for x, y, cond in tqdm(dataloader, desc=f'Evaluate {dataset_name} dataset.', total=len(dataloader)):\n",
@@ -534,10 +602,23 @@
     "                switch, peak_reduction = cond[i, :].flatten().cpu().tolist()\n",
     "                prefix = f'{str(ii).zfill(3)}-switch={switch}-peak-reduction={peak_reduction}'\n",
     "    \n",
-    "                x_audio = x[i, :].flatten().cpu().numpy()\n",
-    "                y_audio = y[i, :].flatten().cpu().numpy()\n",
-    "                y_hat_audio = y_hat[i, :].flatten().cpu().numpy()\n",
+    "                x_audio = x[i, :].flatten()\n",
+    "                y_audio = y[i, :].flatten()\n",
+    "                y_hat_audio = y_hat[i, :].flatten()\n",
     "                y_diff_audio = y_audio - y_hat_audio\n",
+    "\n",
+    "                y_stft = torch.stft(y_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
+    "                y_hat_stft = torch.stft(y_hat_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
+    "                y_diff_stft = (y_stft.abs() - y_hat_stft.abs()).log10().mul(10).cpu().numpy()\n",
+    "\n",
+    "                x_audio = x_audio.cpu().numpy()\n",
+    "                y_audio = y_audio.cpu().numpy()\n",
+    "                y_hat_audio = y_hat_audio.cpu().numpy()\n",
+    "                y_diff_audio = y_diff_audio.cpu().numpy()\n",
+    "\n",
+    "                y_rms = acquire_rms(y_audio)\n",
+    "                y_hat_rms = acquire_rms(y_hat_audio)\n",
+    "                y_diff_rms = y_rms - y_hat_rms\n",
     "\n",
     "                wavfile.write(output_dir / f'{prefix}-x.wav', SignalTrainDataset.sample_rate, x_audio)\n",
     "                wavfile.write(output_dir / f'{prefix}-y.wav', SignalTrainDataset.sample_rate, y_audio)\n",
@@ -552,10 +633,6 @@
     "                fig.savefig(str(output_dir / f'{prefix}-y-diff.png'))\n",
     "                plt.close(fig)\n",
     "\n",
-    "                y_rms = acquire_rms(y_audio)\n",
-    "                y_hat_rms = acquire_rms(y_hat_audio)\n",
-    "                y_diff_rms = y_rms - y_hat_rms\n",
-    "\n",
     "                fig, ax = plt.subplots(figsize=(25, 5))\n",
     "                ax.plot(y_diff_rms)\n",
     "                ax.set_title(f'{prefix}')\n",
@@ -564,9 +641,6 @@
     "                fig.savefig(str(output_dir / f'{prefix}-y-rms-diff.png'))\n",
     "                plt.close(fig)\n",
     "\n",
-    "                y_stft = torch.stft(y_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
-    "                y_hat_stft = torch.stft(y_hat_audio, n_fft=1024, hop_length=256, win_length=1024, return_complex=True)\n",
-    "                y_diff_stft = (y_stft.abs() - y_hat_stft.abs()).log10().mul(10).cpu().numpy()\n",
     "\n",
     "                fig, ax = plt.subplots(figsize=(25, 5))\n",
     "                ax.pcolormesh(y_diff_stft, cmap='jet')\n",
@@ -682,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
